--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,13 @@
 
   	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
-		    
+		    <ul class="nav navbar-nav">
+		    <li><%= link_to 'New Tweet', new_tweet_path %></li>
+		    	
+		    </ul>
 		</div>
   	</nav>
-  	<div class="container">
+  	<div class="container main">
   		<%= yield %>
   	</div>
     
