bootstrap new tweet page

--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -11,15 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
+<form>
+  <div class="field form-group">
     <%= f.label :message %><br>
-    <%= f.text_field :message %>
+    <%= f.text_field :message, class: "form-control" %>
   </div>
-  <div class="field">
+  <div class="cant-see-me">
     <%= f.label :user_id %><br>
     <%= f.text_field :user_id, value: current_user.id %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="actions form-group" ">
+    <%= f.submit class: "btn btn-default" %>
   </div>
+</form>
 <% end %>
