--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,11 @@
 
   <body>
 
-  	<nav class="navbar navbar-default navbar-fixed-top">
+  	<nav class="navbar navbar-default">
 		<div class="container">
 		    <ul class="nav navbar-nav">
-		    <li><%= link_to 'New Tweet', new_tweet_path %></li>
+		    	<li><%= link_to 'Home', root_path %></li>
+		    	<li><%= link_to 'New Tweet', new_tweet_path %></li>
 		    	
 		    </ul>
 		</div>
