--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -2,25 +2,19 @@
 
 <h1>Whatever, this is just a header</h1>
 
-<table class="table table=striped">
-	<thead>
-		<tr>
-			<th>Message</th>
-			<th>User</th>
-			<th colspan='3'></th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @t.each do |x| %>
-		<tr>
-			<td><%= x.message %></td>
-			<td><%= x.user.username %></td>
-			<td><%= link_to 'Show', x %></td>
-			<td><%= link_to 'Edit', edit_tweet_path(x) %></td>
-			<td><%= link_to 'Destroy', x, method: :delete, data: { confirm: 'Are you sure?'} %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
+<% @t.each do |x| %>
 
-<br>
+<div class="panel panel-primary">
+	<div class="panel-heading">
+		<h3 class="panel-title"><%= x.user.username %></h3>		
+	</div>
+	<div class="panel-body">
+		<%= x.message %>
+	</div>
+	<div class="panel-footer">
+		<%= link_to 'Show', x, class: "btn btn-primary" %>
+		<%= link_to 'Edit', edit_tweet_path(x) %>
+		<%= link_to 'Destroy', x, method: :delete, data: { confirm: 'Are you sure?'} %>
+	</div>
+</div>
+<% end %>
