--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -11,10 +11,13 @@
 	<div class="panel-body">
 		<%= x.message %>
 	</div>
+
+	<% if current_user.id == x.user.id %>
 	<div class="panel-footer">
 		<%= link_to 'Show', x, class: "btn btn-primary" %>
-		<%= link_to 'Edit', edit_tweet_path(x) %>
-		<%= link_to 'Destroy', x, method: :delete, data: { confirm: 'Are you sure?'} %>
+		<%= link_to 'Edit', edit_tweet_path(x), class: "btn btn-primary" %>
+		<%= link_to 'Destroy', x, method: :delete, data: { confirm: 'Are you sure?', }, class: "btn btn-primary" %>
 	</div>
+	<% end %>
 </div>
 <% end %>
